docs(swagger): adiciona documentacao das rotas de produtos
